--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-uglify": "~0.6.0",
-    "grunt-bump": "0.0.16"
+    "grunt-bump": "0.0.16",
+    "grunt-contrib-clean": "~0.6.0"
   }
 }
